<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ProfileFragment">

    <TextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/user_name"
        android:textAppearance="@style/heading2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/account"
        android:textAppearance="@style/heading3"
        app:layout_constraintStart_toStartOf="@+id/profile_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_tv" />

    <TextView
        android:id="@+id/help_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="help"
        android:textAppearance="@style/subHeading"
        android:textColor="@color/app_background"
        app:layout_constraintBottom_toBottomOf="@+id/profile_name_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/account_tv"
        app:layout_constraintTop_toBottomOf="@+id/account_tv">

        <ImageView
            android:id="@+id/my_account_imgv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/dark_gray" />

        <TextView
            android:id="@+id/my_account_tv"
            style="@style/smallText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/my_account"
            android:textAppearance="@style/smallText1"
            android:textColor="#323232"
            app:layout_constraintStart_toEndOf="@+id/my_account_imgv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_acc_discreption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_changes_to_your_account"
            android:textAppearance="@style/smallText2"
            android:textColor="#868686"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/my_account_tv" />

        <ImageView
            android:id="@+id/back1_imgv"
            android:layout_width="6.98dp"
            android:layout_height="11.68dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/payment_imgv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/dark_gray" />

        <TextView
            android:id="@+id/payment_tv"
            style="@style/smallText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/payment"
            android:textAppearance="@style/smallText1"
            android:textColor="#323232"
            app:layout_constraintStart_toEndOf="@+id/payment_imgv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/payment_discreption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mange_you_billings_and_discounts"
            android:textAppearance="@style/smallText2"
            android:textColor="#868686"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/payment_tv" />

        <ImageView
            android:id="@+id/back2_imgv"
            android:layout_width="6.98dp"
            android:layout_height="11.68dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageView
            android:id="@+id/orders_imgv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/dark_gray" />

        <TextView
            android:id="@+id/orders_tv"
            style="@style/smallText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/orders"
            android:textAppearance="@style/smallText1"
            android:textColor="#323232"
            app:layout_constraintStart_toEndOf="@+id/orders_imgv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orders_discreption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_your_orders_history"
            android:textAppearance="@style/smallText2"
            android:textColor="#868686"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/orders_tv" />

        <ImageView
            android:id="@+id/back3_imgv"
            android:layout_width="6.98dp"
            android:layout_height="11.68dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>