<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".PhoneAuthFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/all_text_color_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode_picker"
            android:layout_width="99dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ccp_design"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/phone_num_edt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ccp_design"
            android:ems="10"
            android:hint="1001234567"
            android:inputType="numberDecimal"
            android:paddingLeft="8dp"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="@+id/countryCode_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryCode_picker"
            app:layout_constraintTop_toTopOf="@+id/countryCode_picker"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="363dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/make_sure_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/countryCode_picker"
            app:layout_constraintTop_toBottomOf="@+id/phone_num_edt" />

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:inputType="numberDecimal"
            android:itemBackground="@color/gray"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:cursorColor="@color/black"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="54dp"
            app:itemRadius="12dp"
            app:itemSpacing="0dp"
            app:itemWidth="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:lineColor="@color/white"
            app:lineWidth="4dp"
            app:viewType="rectangle" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="373dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_login_layout"
            android:text="@string/continue_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/app_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="373dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_login_layout"
            android:text="@string/verify_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="@color/app_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="132dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="لم أتلقى رمز؟"
            android:textColor="@color/all_text_color_black"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/resend_tv"
            android:layout_width="98dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="أرسل رمز جديد"
            android:textColor="@color/app_background"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/otp_verf" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/otp_verify1" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/otp1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/otp1" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:srcCompat="@drawable/otp1"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11"
            app:srcCompat="@drawable/otp1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>